--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-table [data]="data | async" (dataModified)="dataChanged($event)"></app-table>
+<app-table [data]="data | async" (dataModified)="dataChanged($event)" [columnDefsTable]="columnDefs" ></app-table>
